name: Tetris
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved

executable Tetris
  default-language:       Haskell2010
  main-is: Main.hs
  buildable: True
  hs-source-dirs: src
  build-depends: random,
                 array,
                 base,
                 OpenGL,
                 GLUT
  other-modules: Constants Stack Bindings Block Cube Display Main
               Piece TetrisWorld
